--- a/taotao-common/pom.xml
+++ b/taotao-common/pom.xml
@@ -14,7 +14,7 @@
 
   <parent>
     <groupId>com.taotao</groupId>
-    <artifactId>taotao-parents</artifactId>
+    <artifactId>taotao-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
