--- a/taotao-manager/taotao-manager-dao/pom.xml
+++ b/taotao-manager/taotao-manager-dao/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
-            <version>4.1.4.RELEASE</version>
+            <version>3.4.4</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>5.1.2-beta}</version>
+            <version>5.1.2-beta</version>
         </dependency>
         <!-- MySql -->
         <dependency>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.1.0</version>
+            <version>1.0.18</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
